syntax = "proto3";

package order;
option go_package = "./orderService";

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse) {}
  rpc CancelOrder (CancelOrderRequest) returns (CancelOrderResponse) {}
  rpc GetOrder (GetOrderRequest) returns (GetOrderResponse) {}
  rpc GetAllOrders (GetAllOrdersRequest) returns (GetAllOrdersResponse) {}
}

message CreateOrderRequest {
  Order order = 1;
}

message CreateOrderResponse {
  int64 order_id = 1;
}

message CancelOrderRequest {
  int64 order_id = 1;
}

message CancelOrderResponse {
  bool success = 1;
}

message GetOrderRequest {
  int64 order_id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message GetAllOrdersRequest{}

message GetAllOrdersResponse{
  repeated Order order = 1;
}

message Order {
  // Id
  int64 id = 1;
  // CreateTime
  int64 create_time = 2;
  // Status
  OrderStatus status = 3;
  // Items
  repeated OrderItem items = 4;
}

message OrderItem {
  // ProductId
  int64 product_id = 1;
  // ProductName
  string product_name = 2;
  // Quantity
  int32 quantity = 3;
}

enum OrderStatus {
  UNKNOWN = 0;
  CREATED = 1;
  CANCELLED = 2;
  DELIVERED = 3;
}